Fixed image getting cut off.

--- a/widgets/btt/cc/ui/content/composer-music/composer-music.css
+++ b/widgets/btt/cc/ui/content/composer-music/composer-music.css
@@ -510,7 +510,7 @@
 
 .__CLASS__ .did-you-know-underlay h2
 {
-	padding-top: 30px;
+	padding-top: 0;
 	color: #e22f5b;
 	font-size: 42px;
 	font-weight: normal;
